// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-selectable-steps.vue Demo-动态数据渲染 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
    </nav>
    <div class="body"></div>
  </div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" desc="true" passed="true">
        <div class="item-body" title="步骤 1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">步骤 1</span>
        </div>
        <span class="desc" vusion-slot-name="desc">
          描述 1
        </span>
      </a>
      <a class="item" desc="true" selected="selected">
        <div class="item-body" title="步骤 2">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">步骤 2</span>
        </div>
        <span class="desc" vusion-slot-name="desc">
          描述 2
        </span>
      </a>
      <a class="item" desc="true">
        <div class="item-body" title="步骤 3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">步骤 3</span>
        </div>
        <span class="desc" vusion-slot-name="desc">
          描述 3
        </span>
      </a>
    </nav>
    <div class="body"></div>
  </div>
  <a class="root" hovertype="underline" size="small" slot="extra" tabindex="0" target="_self" vusion-slot-name-edit="text">
    add step
  </a>
  <a class="root" hovertype="underline" size="small" slot="extra" tabindex="0" target="_self" vusion-slot-name-edit="text">
    value+1
  </a>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    reload
  </a>
</div>
`;

exports[`u-selectable-steps.vue Demo-只读 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" selected="selected">
        <div class="item-body" title="Step1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" readonly="readonly">
        <div class="item-body" title="Readonly">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Readonly
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body" title="Step3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style vusion-slot-name="default">Content1
      </div>
      <div style="display: none;" vusion-slot-name="default">Readonly
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-基本用法 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" passed="true">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span class="root" vusion-slot-name-edit="text">步骤1</span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" selected="selected">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span class="root" vusion-slot-name-edit="text">步骤2</span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span class="root" vusion-slot-name-edit="text">步骤3</span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style="display: none;" vusion-slot-name="default">
      </div>
      <div style vusion-slot-name="default">
      </div>
      <div style="display: none;" vusion-slot-name="default">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-基本用法 2`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" passed="true">
        <div class="item-body" title="Step1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" selected="selected">
        <div class="item-body" title="Step2">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step2
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body" title="Step3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style="display: none;" vusion-slot-name="default">Content1
      </div>
      <div style vusion-slot-name="default">Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-宽度自适应 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline" size="auto">
    <nav class="head">
      <a class="item" passed="true" style="width: 20%;">
        <div class="item-body" title="Step1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" selected="selected" style="width: 20%;">
        <div class="item-body" title="Step2">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step2
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" style="width: 20%;">
        <div class="item-body" title="Step3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" style="width: 20%;">
        <div class="item-body" title="Step4">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step4
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" style="width: 20%;">
        <div class="item-body" title="Step5">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step5
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style="display: none;" vusion-slot-name="default">Content1
      </div>
      <div style vusion-slot-name="default">Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
      <div style="display: none;" vusion-slot-name="default">Content4
      </div>
      <div style="display: none;" vusion-slot-name="default">Content5
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-指定状态 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline" size="auto">
    <nav class="head">
      <a class="item" passed="true" style="width: 25%;">
        <div class="item-body" title="Step1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" failed="true" style="width: 25%;">
        <div class="item-body" title="Step2">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step2
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" selected="selected" style="width: 25%;">
        <div class="item-body" title="Step3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" style="width: 25%;">
        <div class="item-body" title="Step4">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step4
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style vusion-slot-name="default">Content1
      </div>
      <div style="display: none;" vusion-slot-name="default">Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
      <div style="display: none;" vusion-slot-name="default">Content4
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-禁用 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" selected="selected">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span class="root" vusion-slot-name-edit="text">步骤1</span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" disabled="disabled">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span class="root" vusion-slot-name-edit="text">步骤2</span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span class="root" vusion-slot-name-edit="text">步骤3</span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style vusion-slot-name="default">
      </div>
      <div style="display: none;" vusion-slot-name="default">
      </div>
      <div style="display: none;" vusion-slot-name="default">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-禁用 2`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" selected="selected">
        <div class="item-body" title="Step1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" disabled="disabled">
        <div class="item-body" title="Step2">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step2
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body" title="Step3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style vusion-slot-name="default">Content1
      </div>
      <div style="display: none;" vusion-slot-name="default">Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-竖向步骤条 1`] = `
<div>
  <div class="root" direction="vertical" layout="inline">
    <nav class="head">
      <a class="item" selected="selected">
        <div class="item-body" title="Step1">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body" title="Step2">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step2
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body" title="Step3">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style vusion-slot-name="default">Content1
      </div>
      <div style="display: none;" vusion-slot-name="default">Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-自定义图标 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" passed="true">
        <div class="item-body" title="Step1">
          <span class="radio" custom-icon="true">
            <span class="lcp-iconv">
              <span class="iconwrap">
                <svg aria-hidden="true" class="iconsvg">
                  <use xlink:href="#pc-find" />
                </svg>
              </span>
              <div class="icontext" vusion-slot-name="default">
              </div>
            </span>
          </span>
          <span class="title" vusion-slot-name="title">
            Step1
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" selected="selected">
        <div class="item-body" title="Step2">
          <span class="radio" custom-icon="true">
            <span class="lcp-iconv">
              <span class="iconwrap">
                <svg aria-hidden="true" class="iconsvg">
                  <use xlink:href="#pc-task-done" />
                </svg>
              </span>
              <div class="icontext" vusion-slot-name="default">
              </div>
            </span>
          </span>
          <span class="title" vusion-slot-name="title">
            Step2
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body" title="Step3">
          <span class="radio" custom-icon="true">
            <span class="lcp-iconv">
              <span class="iconwrap">
                <svg aria-hidden="true" class="iconsvg">
                  <use xlink:href="#pc-notice" />
                </svg>
              </span>
              <div class="icontext" vusion-slot-name="default">
              </div>
            </span>
          </span>
          <span class="title" vusion-slot-name="title">
            Step3
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style="display: none;" vusion-slot-name="default">Content1
      </div>
      <div style vusion-slot-name="default">Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">Content3
      </div>
    </div>
  </div>
</div>
`;

exports[`u-selectable-steps.vue Demo-自定义标题 1`] = `
<div>
  <div class="root" direction="horizontal" layout="inline">
    <nav class="head">
      <a class="item" passed="true">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span>Step <span class="root" type="filled">
                <span vusion-slot-name-edit="text">1</span>
              </span>
            </span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item" selected="selected">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span>Step <span class="root" type="filled">
                <span vusion-slot-name-edit="text">2</span>
              </span>
            </span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
      <a class="item">
        <div class="item-body">
          <span class="radio"></span>
          <span class="title" vusion-slot-name="title">
            <span>Step <span class="root" type="filled">
                <span vusion-slot-name-edit="text">3</span>
              </span>
            </span>
          </span>
        </div>
        <span class="desc" vusion-slot-name="desc">

        </span>
      </a>
    </nav>
    <div class="body">
      <div style="display: none;" vusion-slot-name="default">
        Content1
      </div>
      <div style vusion-slot-name="default">
        Content2
      </div>
      <div style="display: none;" vusion-slot-name="default">
        Content3
      </div>
    </div>
  </div>
</div>
`;
